WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74709
[GTK] Window frame should be 0x0 when the toplevel window is not visible
https://bugs.webkit.org/show_bug.cgi?id=74709
Summary
[GTK] Window frame should be 0x0 when the toplevel window is not visible
Carlos Garcia Campos
Reported
2011-12-16 05:29:29 PST
When a new view is requested FrameLoader::createWindow() is called with the window features already set. Then, the window size it's adjusted for the difference between the window size and the page size. The page size is 0x0 because the new view is not yet realized, and the toplevel window containing the view is not shown yet, so the windowFrame we are reporting at this point is the default window size. So we end up adding the default window size to the size already set in the window features object.
Attachments
Patch
(1.43 KB, patch)
2011-12-16 05:32 PST
,
Carlos Garcia Campos
gustavo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-12-16 05:32:32 PST
Created
attachment 119604
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-16 05:37:38 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Gustavo Noronha (kov)
Comment 3
2011-12-16 05:57:04 PST
Comment on
attachment 119604
[details]
Patch How does this impact the WindowProperties test, if at all? Would be good to update it. I had to disable asserting x and y because WebCore was handing us a wrong value for the y coordinate, this sounds like it could have a positive impact for that problem? =)
Carlos Garcia Campos
Comment 4
2011-12-16 05:59:55 PST
It doesn't affect the tests because in the tests the view is never realized beause we don't use a window, that's why I haven't noticed it until I impemented it in MiniBrowser, see
bug #74711
Carlos Garcia Campos
Comment 5
2011-12-16 06:02:14 PST
btw, the unit test passes for me with and without the patch, so I don't know why Webcore reports a different x, y values, because coordintates are not adjusted in FrameLoader::createWindow() only the window size.
Gustavo Noronha (kov)
Comment 6
2011-12-16 06:09:12 PST
(In reply to
comment #5
)
> btw, the unit test passes for me with and without the patch, so I don't know why Webcore reports a different x, y values, because coordintates are not adjusted in FrameLoader::createWindow() only the window size.
Even if you add the asserts for x, y? Yeah, I digged quite a bit to try to find where the wrong value of y was coming from, but stopped when I reached WebCore, will have to dig a bit more from there.
Gustavo Noronha (kov)
Comment 7
2011-12-16 06:10:27 PST
Comment on
attachment 119604
[details]
Patch OK
Carlos Garcia Campos
Comment 8
2011-12-16 06:42:02 PST
Committed
r103067
: <
http://trac.webkit.org/changeset/103067
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug