[GTK] Window frame should be 0x0 when the toplevel window is not visible https://bugs.webkit.org/show_bug.cgi?id=74709

Reviewed by Gustavo Noronha Silva.

* UIProcess/API/gtk/WebKitUIClient.cpp:
(getWindowFrame): Check also whether the toplevel is visible
before getting its size and position.

Canonical link: https://commits.webkit.org/91431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103067 268f45cc-cd09-0410-ab3c-d52691b4dbfc